tests/snapshots/integration__integration_tests__help__help_list_long.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - list
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_EDITOR: ""
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_CONFIG_PATH: /nonexistent/test/config.toml
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
wt list - List worktrees and optionally branches
Usage: [1m[36mwt list[0m [36m[OPTIONS][0m
       [1m[36mwt list[0m [36m<COMMAND>[0m

[1m[32mCommands:[0m
  [1m[36mstatusline[0m  Single-line status for shell prompts

[1m[32mOptions:[0m
      [1m[36m--format[0m[36m [0m[36m<FORMAT>[0m
          Output format (table, json)
          
          [default: table]

      [1m[36m--branches[0m
          Include branches without worktrees

      [1m[36m--remotes[0m
          Include remote branches

      [1m[36m--full[0m
          Show CI and [1mmain[0m diffstat

      [1m[36m--progressive[0m
          Show fast info immediately, update with slow info[0m
          [0m
          Displays local data (branches, paths, status) first, then updates with remote data (CI, upstream) as it arrives. Auto-enabled for TTY.[0m

  [1m[36m-h[0m, [1m[36m--help[0m
          Print help (see a summary with '-h')

[1m[32mGlobal Options:[0m
  [1m[36m-C[0m[36m [0m[36m<path>[0m
          Working directory for this command

      [1m[36m--config[0m[36m [0m[36m<path>[0m
          User config file path

  [1m[36m-v[0m, [1m[36m--verbose[0m
          Show commands and debug info

Show all worktrees with their status. The table includes uncommitted changes, divergence from main and remote, and optional CI status.

The table renders progressively: branch names, paths, and commit hashes appear immediately, then status, divergence, and other columns fill in as background git operations complete. With [2m--full[0m, CI status fetches from the network — the table displays instantly and CI fills in as results arrive.

[32mExamples[0m

List all worktrees:

  [2m$ wt list[0m

Include CI status and line diffs:

  [2m$ wt list --full[0m

Include branches that don't have worktrees:

  [2m$ wt list --branches --full[0m

Output as JSON for scripting:

  [2m$ wt list --format=json[0m

[32mColumns[0m

  Column   Shows                                       
  ───────  ────────────────────────────────────────────
  Branch   Branch name                                 
  Status   Compact symbols (see below)                 
  HEAD±    Uncommitted changes: +added -deleted lines  
  main↕    Commits ahead/behind main                   
  main…±   Line diffs in commits ahead of main ([2m--full[0m)
  Path     Worktree directory                          
  Remote⇅  Commits ahead/behind tracking branch        
  CI       Pipeline status ([2m--full[0m)                    
  Commit   Short hash (8 chars)                        
  Age      Time since last commit                      
  Message  Last commit message (truncated)             

The CI column shows GitHub/GitLab pipeline status:

  Indicator  Meaning                  
  ─────────  ─────────────────────────
  [32m●[0m green    All checks passed        
  [34m●[0m blue     Checks running           
  [31m●[0m red      Checks failed            
  [33m●[0m yellow   Merge conflicts with base
  [90m●[0m gray     No checks configured     
  (blank)    No upstream or no PR/MR  

CI is only checked for branches that track a remote — local-only branches show blank. Any CI dot appears dimmed when there are unpushed local changes (stale status). CI indicators are clickable links to the PR page. Results are cached for 30-60 seconds; use [2mwt config cache[0m to view or clear.

[32mStatus symbols[0m

The Status column has multiple subcolumns. Within each, only the first matching symbol is shown (listed in priority order):

  Subcolumn          Symbol  Meaning                             
  ─────────────────  ──────  ────────────────────────────────────
  Working tree (1)   [36m+[0m       Staged files                        
  Working tree (2)   [36m![0m       Modified files (unstaged)           
  Working tree (3)   [36m?[0m       Untracked files                     
  Branch state       [31m✖[0m       Merge conflicts                     
                     [33m↻[0m       Rebase in progress                  
                     [33m⋈[0m       Merge in progress                   
                     [33m⚔[0m       Would conflict if merged to main    
                     [2m≡[0m       Matches main (identical contents)   
                     [2m_[0m       No commits ahead, clean working tree
  Main divergence    [2m^[0m       Is the main branch                  
                     [2m↑[0m       Ahead of main                       
                     [2m↓[0m       Behind main                         
                     [2m↕[0m       Diverged from main                  
  Remote divergence  [2m|[0m       In sync with remote                 
                     [2m⇡[0m       Ahead of remote                     
                     [2m⇣[0m       Behind remote                       
                     [2m⇅[0m       Diverged from remote                
  Worktree state     [2m/[0m       Branch without worktree             
                     [31m⚑[0m       Path doesn't match template         
                     [33m⌫[0m       Prunable (directory missing)        
                     [33m⊠[0m       Locked worktree                     

Rows are dimmed when the branch content is already in main ([2m≡[0m matches main or [2m_[0m no commits ahead).

[32mJSON output[0m

Query structured data with [2m--format=json[0m:

  [2m# Worktrees with conflicts[0m
  [2mwt list --format=json | jq '.[] | select(.status.branch_state == "Conflicts")'[0m
  [2m[0m
  [2m# Uncommitted changes[0m
  [2mwt list --format=json | jq '.[] | select(.status.working_tree.modified)'[0m
  [2m[0m
  [2m# Current worktree[0m
  [2mwt list --format=json | jq '.[] | select(.is_current == true)'[0m
  [2m[0m
  [2m# Branches ahead of main[0m
  [2mwt list --format=json | jq '.[] | select(.status.main_divergence == "Ahead")'[0m

[1mStatus fields:[0m
- [2mworking_tree[0m: [2m{untracked, modified, staged, renamed, deleted}[0m
- [2mbranch_state[0m: [2m""[0m | [2m"Conflicts"[0m | [2m"MergeTreeConflicts"[0m | [2m"MatchesMain"[0m | [2m"NoCommits"[0m
- [2mgit_operation[0m: [2m""[0m | [2m"Rebase"[0m | [2m"Merge"[0m
- [2mmain_divergence[0m: [2m""[0m | [2m"Ahead"[0m | [2m"Behind"[0m | [2m"Diverged"[0m
- [2mupstream_divergence[0m: [2m""[0m | [2m"Ahead"[0m | [2m"Behind"[0m | [2m"Diverged"[0m

[1mPosition fields:[0m
- [2mis_main[0m — Main worktree
- [2mis_current[0m — Current directory
- [2mis_previous[0m — Previous worktree from wt switch

[32mSee also[0m

- wt select — Interactive worktree picker with live preview
