tests/snapshots/integration__integration_tests__help__help_merge.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - merge
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_EDITOR: ""
---
success: true
exit_code: 0
----- stdout -----
wt merge - Merge worktree into target branch
Usage: wt merge [OPTIONS] [TARGET]

Arguments:
  [TARGET]
      Target branch              
                                 
      Defaults to default branch.

Options:
  --no-squash              
      Skip commit squashing

  --no-commit                        
      Skip commit, squash, and rebase

  --no-remove                  
      Keep worktree after merge

  --no-verify               
      Skip all project hooks

  -f, --force
      Skip approval prompts

  --stage <STAGE>                                   
      What to stage before committing [default: all]

      Possible values:                                                       
      - all:     Stage everything: untracked files + unstaged tracked changes
      - tracked: Stage tracked changes only (like git add -u)                
      - none:    Stage nothing, commit only what's already in the index      

  -h, --help
      Print help (see a summary with '-h')

Global Options:
  -C <path>
      Change working directory

  --config <path>          
      User config file path

  -v, --verbose
      Show commands and debug info

[38;5;10mOPERATION[39m

Commit → Squash → Rebase → Pre-merge hooks → Push → Cleanup → Post-merge hooks

Commit: Uncommitted changes are staged and committed with LLM message.
Use --stage=tracked to stage only tracked files, or --stage=none to commit only 
what's already staged.

Squash: Multiple commits are squashed into one with LLM message.
Skip with --no-squash. Safety backup: git reflog show refs/wt-backup/<branch>

Rebase: Branch is rebased onto target. Conflicts abort the merge immediately.

Hooks: Pre-merge commands run after rebase (failures abort). Post-merge commands
run after cleanup (failures logged). Skip all with --no-verify.

Push: Fast-forward push to local target branch. Non-fast-forward pushes are 
rejected.

Cleanup: Worktree and branch are removed. Skip with --no-remove.

[38;5;10mEXAMPLES[39m

Basic merge to main:
wt merge

Merge without squashing:
wt merge --no-squash

Keep worktree after merging:
wt merge --no-remove

Skip all hooks:
wt merge --no-verify

----- stderr -----
