tests/snapshots/integration__integration_tests__help__help_remove_long.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - remove
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_EDITOR: ""
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_CONFIG_PATH: /nonexistent/test/config.toml
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
wt remove - Remove worktree and branch
Usage: [1m[36mwt remove[0m [36m[OPTIONS][0m [36m[WORKTREES]...[0m

[1m[32mArguments:[0m
  [36m[WORKTREES]...[0m
          Worktree or branch (@ for current)

[1m[32mOptions:[0m
      [1m[36m--no-delete-branch[0m
          Keep branch after removal

  [1m[36m-D[0m, [1m[36m--force-delete[0m
          Delete unmerged branches

      [1m[36m--no-background[0m
          Run removal in foreground

  [1m[36m-h[0m, [1m[36m--help[0m
          Print help (see a summary with '-h')

[1m[32mGlobal Options:[0m
  [1m[36m-C[0m[36m [0m[36m<path>[0m
          Working directory for this command

      [1m[36m--config[0m[36m [0m[36m<path>[0m
          User config file path

  [1m[36m-v[0m, [1m[36m--verbose[0m
          Show commands and debug info

[32mOperation[0m

Removes worktree directory, git metadata, and branch. Requires clean working tree.

### No arguments (remove current)

- Removes current worktree and switches to main worktree
- In main worktree: switches to default branch

### By name (remove specific)

- Removes specified worktree(s) and branches
- Current worktree removed last (switches to main first)

### Worktree resolution

Arguments are resolved to worktrees using [1mpath-first lookup[0m:

1. Compute the expected path for the argument (using the configured path template)
2. If a worktree exists at that path, use it (regardless of what branch it's on)
3. Otherwise, treat the argument as a branch name

[1mExample[0m: If [2mrepo.foo/[0m exists but is on branch [2mbar[0m:

- [2mwt remove foo[0m removes [2mrepo.foo/[0m and the [2mbar[0m branch
- [2mwt remove bar[0m also works (falls back to branch lookup)

[1mConflict detection[0m: If path [2mrepo.foo/[0m has a worktree on branch [2mbar[0m, but
branch [2mfoo[0m has a different worktree at [2mrepo.bar/[0m, an error is raised.

[1mSpecial arguments[0m:

- [2m@[0m - current worktree (by path, works in detached HEAD)
- [2m-[0m - previous worktree (from switch history)
- [2m^[0m - main worktree

### Branch deletion

By default, branches are deleted only when their content is already in the target branch:

- no changes beyond the common ancestor — [2mgit diff --name-only target...branch[0m is empty:
  no files changed between the merge base of [2mtarget[0m/[2mbranch[0m and the tip of [2mbranch[0m.
- same content as target — [2mgit rev-parse branch^{tree}[0m equals [2mgit rev-parse target^{tree}[0m:
  both branches point at the same tracked-files snapshot (tree), even if the commits differ.

This handles workflows where PRs are squash-merged or rebased, which don't preserve
commit ancestry but do integrate the content. Use [2m-D[0m to delete unintegrated
branches, or [2m--no-delete-branch[0m to always keep branches.

### Background removal (default)

- Returns immediately for continued work
- Logs: [2m.git/wt-logs/{branch}-remove.log[0m
- Use [2m--no-background[0m for foreground (blocking)

### Cleanup

Stops any git fsmonitor daemon for the worktree before removal. This prevents orphaned processes when using builtin fsmonitor ([2mcore.fsmonitor=true[0m). No effect on Watchman users.

[32mExamples[0m

Remove current worktree and branch:

  [2mwt remove[0m

Remove specific worktree and branch:

  [2mwt remove feature-branch[0m

Remove worktree but keep branch:

  [2mwt remove --no-delete-branch feature-branch[0m

Remove multiple worktrees:

  [2mwt remove old-feature another-branch[0m

Remove in foreground (blocking):

  [2mwt remove --no-background feature-branch[0m

Switch to default in main:

  [2mwt remove  # (when already in main worktree)[0m
