tests/snapshots/integration__integration_tests__help__help_switch_long.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - switch
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_EDITOR: ""
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_CONFIG_PATH: /nonexistent/test/config.toml
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
wt switch - Switch to a worktree
Usage: [1m[36mwt switch[0m [36m[OPTIONS][0m [36m<BRANCH>[0m

[1m[32mArguments:[0m
  [36m<BRANCH>[0m
          Branch or worktree name[0m
          [0m
          Shortcuts: '^' (main), '-' (previous), '@' (current)[0m

[1m[32mOptions:[0m
  [1m[36m-c[0m, [1m[36m--create[0m
          Create a new branch

  [1m[36m-b[0m, [1m[36m--base[0m[36m [0m[36m<BASE>[0m
          Base branch[0m
          [0m
          Defaults to default branch.[0m

  [1m[36m-x[0m, [1m[36m--execute[0m[36m [0m[36m<EXECUTE>[0m
          Command to run after switch

  [1m[36m-f[0m, [1m[36m--force[0m
          Skip approval prompts

      [1m[36m--no-verify[0m
          Skip all project hooks

  [1m[36m-h[0m, [1m[36m--help[0m
          Print help (see a summary with '-h')

[1m[32mGlobal Options:[0m
  [1m[36m-C[0m[36m [0m[36m<path>[0m
          Working directory for this command

      [1m[36m--config[0m[36m [0m[36m<path>[0m
          User config file path

  [1m[36m-v[0m, [1m[36m--verbose[0m
          Show commands and debug info

Two distinct operations:

- [1mSwitch to existing worktree[0m — Changes directory, nothing else
- [1mCreate new worktree[0m ([2m--create[0m) — Creates branch and worktree, runs [hooks](/hooks/)

[32mExamples[0m

  [2mwt switch feature-auth           # Switch to existing worktree[0m
  [2mwt switch -                      # Previous worktree (like cd -)[0m
  [2mwt switch --create new-feature   # Create branch and worktree[0m
  [2mwt switch --create hotfix --base production[0m

For interactive selection, use [[2mwt select[0m](/select/).

[32mCreating Worktrees[0m

With [2m--create[0m, worktrunk:

1. Creates branch from [2m--base[0m (defaults to default branch)
2. Creates worktree at configured path
3. Runs [post-create hooks](/hooks/#post-create) (blocking)
4. Switches to new directory
5. Spawns [post-start hooks](/hooks/#post-start) (background)

  [2mwt switch --create api-refactor[0m
  [2mwt switch --create fix --base release-2.0[0m
  [2mwt switch --create docs --execute "code ."[0m
  [2mwt switch --create temp --no-verify      # Skip hooks[0m

[32mShortcuts[0m

| Symbol | Meaning |
|--------|---------|
| [2m-[0m | Previous worktree |
| [2m@[0m | Current branch's worktree |
| [2m^[0m | Default branch worktree |

  [2mwt switch -                      # Back to previous[0m
  [2mwt switch ^                      # Main worktree[0m
  [2mwt switch --create fix --base=@  # Branch from current HEAD[0m

[32mPath-First Lookup[0m

Arguments resolve by checking the filesystem before git branches:

1. Compute expected path from argument (using configured path template)
2. If worktree exists at that path, switch to it
3. Otherwise, treat argument as branch name

[1mEdge case[0m: If [2mrepo.foo/[0m exists but tracks branch [2mbar[0m:
- [2mwt switch foo[0m → switches to [2mrepo.foo/[0m (the [2mbar[0m worktree)
- [2mwt switch bar[0m → also works (branch lookup finds same worktree)

[32mSee Also[0m

- [wt select](/select/) — Interactive worktree selection
- [wt list](/list/) — View all worktrees
- [wt remove](/remove/) — Delete worktrees when done
- [wt merge](/merge/) — Integrate changes back to main
