tests/snapshots/integration__integration_tests__help__help_switch_short.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - switch
    - "-h"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_EDITOR: ""
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_CONFIG_PATH: /nonexistent/test/config.toml
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
wt switch - Switch to a worktree
Usage: [1m[36mwt switch[0m [36m[OPTIONS][0m [36m<BRANCH>[0m

[1m[32mArguments:[0m
  [36m<BRANCH>[0m  Branch, path, '@' (HEAD), '-' (previous), or '^' (main)

[1m[32mOptions:[0m
  [1m[36m-c[0m, [1m[36m--create[0m             Create a new branch
  [1m[36m-b[0m, [1m[36m--base[0m[36m [0m[36m<BASE>[0m        Base branch
  [1m[36m-x[0m, [1m[36m--execute[0m[36m [0m[36m<EXECUTE>[0m  Command to run after switch
  [1m[36m-f[0m, [1m[36m--force[0m              Skip approval prompts
      [1m[36m--no-verify[0m          Skip all project hooks
  [1m[36m-h[0m, [1m[36m--help[0m               Print help (see more with '--help')

[1m[32mGlobal Options:[0m
  [1m[36m-C[0m[36m [0m[36m<path>[0m            Working directory for this command
      [1m[36m--config[0m[36m [0m[36m<path>[0m  User config file path
  [1m[36m-v[0m, [1m[36m--verbose[0m        Show commands and debug info
